<resources>
    <string name="app_name">Mr_Shopper_app</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="mr_shopper">Mr_Shopper</string>
    <string name="todo3">TODO</string>
    <string name="welcome">welcome</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="welcome1">welcome</string>
    <string name="todo4">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="textview">Name</string>
    <string name="textview1">Email</string>
    <string name="textview2">Password</string>
    <string name="enter_your_name">Enter Your Name..</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="login">Login</string>
    <string name="forget">TextView</string>
    <string name="login1">Login</string>
    <string name="forget_your_password_recovery">Forger Password?</string>
    <string name="textview5">TextView</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account Sign_up?</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="signup">Signup</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="home">Home</string>
    <string name="oders">Oders</string>
    <string name="card">Card</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo11">TODO</string>
    <string name="txt_accc">Mohamed Rimas</string>
    <string name="txt_acc">mohamed@gmail.com</string>
    <string name="todo12">TODO</string>
    <string name="update">Update Admin</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_email1">Enter Your Email</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="change_password">Change Password</string>
    <string name="todo20">TODO</string>
    <string name="mohamed_rimas">Mohamed Rimas</string>
    <string name="moh_rim">moh_rim</string>
    <string name="rimas">rimas</string>
    <string name="full_name">Full name</string>
    <string name="todo18">TODO</string>
    <string name="name">Name</string>

</resources>