<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="match_parent"
                android:layout_height="576dp"
                android:contentDescription="@string/todo3"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/women1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginStart="20dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/welcome1"
                android:textColor="#ED6D44"
                android:textSize="50sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="223dp"
                    android:layout_height="57dp"
                    android:layout_marginBottom="52dp"

                    android:backgroundTint="#ED6D44"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/let_s_start"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.552"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>